# superclaw

./: .gitignore  LOG_20260618.md  README.md  REQUIREMENTS.md  RPA_LEARNING_PLAN.md  SuperClaw.spec  SuperClaw_v2.spec  SuperClaw_v3.spec  SuperClaw_v4.spec  SuperClaw_v5.spec  _check_format.py  _check_format2.py  _check_imports.py  _check_syntax.py  _check_url.py  _check_url2.py  _verify_fix.py  build.py  hongguo-bugfix-brief.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_api.py  run_dashboard.py  start.bat  start_api.py  temp_img.html  test_db.py
benchmarks/: benchmark_account.py  benchmark_http.py  results_account.json  results_http.json
config/: default.yaml  hongguo_ai_usage.json  risk_rules.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DOUYIN_COMMENT_WEB_SPEC.md  anti_detect_guide.md  architecture.md  dag_merge_analysis.md  deployment_guide.md  dispatch_machao.ps1  dispatch_zhuge.ps1  existing_code_analysis.md  hongguo_bug_report.md  hongguo_dev_flow.md  hongguo_full_test_report.md  hongguo_test_report.md  learning_machao_phase3.md  learning_machao_phase4.md  learning_zhaoyun_phase1.md  learning_zhaoyun_phase2.md  learning_zhaoyun_phase3.md  learning_zhaoyun_phase4.md  learning_zhuge_phase1.md  learning_zhuge_phase2.md  learning_zhuge_phase3.md  learning_zhuge_phase4.md  module_list.md  monitoring_guide.md  optimization_plan_v2.md  optimize_plan.md  phase3_final_report.md  phase3_monitoring_notes.md  phase4_plan.md  project_plan.md  project_plan.txt  project_status.md  rate_limiting_notes.md  rpa_dag_notes.md  rpa_drission_notes.md  rpa_engine_design.md  rpa_framework_survey.md  rpa_http_notes.md  rpa_scheduler_notes.md  rpa_task_machao.md  (+32 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend_web/: package-lock.json  package.json
scripts/: hongguo_dev_smoke.py  init_hongguo_mysql.py
src/: main.py
tests/: conftest.py  test_account.py  test_account_pool.py  test_adapter_integration.py  test_anti_detect.py  test_browser.py  test_cli.py  test_config.py  test_constants.py  test_dashboard_douyin.py  test_e2e.py  test_filter.py  test_helpers.py  test_hongguo_api.py  test_hongguo_models.py  test_http_client.py  test_middleware.py  test_models.py  test_monitoring.py  test_playbook.py  test_risk_enhanced.py  test_rpa_engine.py  test_services.py  (+6 more)
(+183 files in other folders)
