[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "superclaw"
version = "0.1.0"
description = "Social media comment lead operations system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0",
    "playwright>=1.40.0",
    "PyMySQL>=1.1.0",
]

[project.scripts]
superclaw = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
